Mon Dec 17 14:59:20 CET 2007 Christian Anthon <anthon@kiku.dk>

	* sounds/Makefile.am, configure.in: we haven't beeen able to recompile
	the sounds for a long time, so let's stop trying.

Sat Dec 15 21:27:19 CET 2007 Christian Anthon <anthon@kiku.dk>

	* Renamed sgf.y to sgf_y.y and sgf.l sgf_l.l to avoid conflicts with
	sgf.c
	* bearoff.c, eval.c, format.c, gnubg.c, gtkgame.c, gtkrolls.c,
	makebearoff.c, multithread.c, play.c, relational.c, rollout.c, sgf.c,
	show.c: minor compiler warnings

Sat Dec 15 21:23:49 CET 2007 Christian Anthon <anthon@kiku.dk>

	* board3d/gtkcolour3d.c: remove unneeded gdk_gl_drawable_begin calls since
	they causes assertions on newer X window.

Thu Dec 13 22:39:56 CET 2007 Christian Anthon <anthon@kiku.dk>

	* Makefile.am, backgammon.h, bearoff.c, bearoff.h, bearoffdump.c,
	drawboard.c, drawboard.h, gnubg.c, gtkrolls.c, makebearoff.c,
	makehyper.c, multithread.c, positionid.c, positionid.h, render.h,
	rollout.c, sgf.y, util.c, util.h, lib/gnubg-types.h: fixes to make
	gnubg compile after Jon's changes. board3d doesn't compile. utility
	programs doesn't compile.

Wed Dec 12 23:12:45 2007 Jon Kinsey <Jon_Kinsey@hotmail.com>
	* movelistctrl: Fix spacing in German (reported by Thomas Steiner)
	* bearoff.c: Fix multithreaded disk bearoff access (reported by Hugh Sconyers)
	* list.h + others: list type renamed to listOLD (ideally replace with glist in future)

Wed Dec 12 15:40:08 CET 2007 Christian Anthon <anthon@kiku.dk>

	* Makefile.am, gnubg.6: manual now maintained in doc

Wed Dec 12 13:52:14 CET 2007 Christian Anthon <anthon@kiku.dk>

	* Makefile.am, board3d/Makefile.am, doc/Makefile.am, lib/Makefile.am,
	m4/Makefile.am, met/Makefile.am, po/POTFILES.in: cleanup and fixes to
	make distcheck

Wed Nov 28 09:43:59 CET 2007 Christian Anthon <anthon@kiku.dk>

	* po/POTFILES.in: remove pub_eval.c
	* doc/Makefile.am: remove *.txt from EXTRA_DIST

Sun Nov 25 12:09:04 CET 2007 Christian Anthon <anthon@kiku.dk>
