@@ -1,3 +1,7 @@
+Mon Dec 17 15:04:42 CET 2007 Christian Anthon <anthon@kiku.dk>
+
+	* sgf.c, gtkgame.c, show.c: use %lu instead of casting to uint.
+
 Mon Dec 17 14:59:20 CET 2007 Christian Anthon <anthon@kiku.dk>
 
 	* sounds/Makefile.am, configure.in: we haven't beeen able to recompile
